trunk/Archive2/2f/58e4fd99be5f55/output
main.cpp:7:1: error: expected unqualified-id before '?' token
 ?????? get_foo_ptr(T v) {
 ^
main.cpp: In function 'int main()':
main.cpp:12:43: error: 'get_foo_ptr' was not declared in this scope
     void(*this_foo)(int) = get_foo_ptr('c');
                                           ^
